QOL improvements to binary build scripts